k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medical-backend-svc
spec:
  selector:
    app: medical-backend
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
