k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medical-frontend-svc
spec:
  selector:
    app: medical-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
